# radio

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  radio1.db  radio2.db
crates/radio-lexicons/: Cargo.toml
crates/radio-lexicons/src/: lib.rs  pet_nkp.rs
crates/radio-lexicons/src/pet_nkp/: radio.rs
crates/radio-lexicons/src/pet_nkp/radio/: admin.rs  chat.rs  control.rs  preferences.rs  queue.rs  songs.rs  station.rs  subsonic.rs
crates/radio-lexicons/src/pet_nkp/radio/admin/: modify.rs  permissions.rs
crates/radio-lexicons/src/pet_nkp/radio/albums/: list.rs  modify.rs
crates/radio-lexicons/src/pet_nkp/radio/chat/: messages.rs  send.rs
crates/radio-lexicons/src/pet_nkp/radio/chat/bans/: list.rs  modify.rs
crates/radio-lexicons/src/pet_nkp/radio/chat/messages/: modify.rs
crates/radio-lexicons/src/pet_nkp/radio/playlists/: list.rs  modify.rs
crates/radio-lexicons/src/pet_nkp/radio/queue/: list.rs  modify.rs
crates/radio-lexicons/src/pet_nkp/radio/songs/: add.rs  cover.rs  list.rs  modify.rs  upload.rs
crates/radio-lexicons/src/pet_nkp/radio/subsonic/: import.rs  search.rs
docs/: embedded-pds-blog-draft2.md  embedded-pds-syndication-blog-draft.md  http-api.md  index.md  xrpc.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/scripts/: copy-dist-to-backend.mjs  generate-client-metadata.mjs
frontend/src/: AdminPage.tsx  App.css  App.tsx  RadioPage.tsx  atproto.ts  audioMetadata.ts  auth.ts  radio.ts
frontend/src/lib/: auth.ts  (+2 more)
lexicons/: add-songs.json  admin-modify.json  admin-permissions.json  chat-bans-list.json  chat-bans-modify.json  chat-messages-modify.json  chat-send.json  chat.json  control-radio.json  cover-song.json  list-albums.json  list-playlists.json  list-songs.json  modify-albums.json  modify-playlists.json  modify-songs.json  preferences.json  queue-list.json  queue-modify.json  radio.json  station.json  subsonic-import.json  subsonic-search.json  upload-songs.json
migrations/: 0001_auth_scaffold.sql  0002_radio.sql  0003_admins_and_covers.sql  0004_album_loop.sql  0005_genre.sql  0006_loudness.sql  0007_chat.sql  0008_chat_kind.sql  0009_chat_moderation.sql  0010_playlists.sql  0011_pds.sql  0012_remove_album_loop.sql  0012_shuffle.sql  0013_restore_album_rotation_tables.sql  0014_rotation.sql  0015_shuffle_queue.sql  0015_tempo.sql  0018_queue_loop.sql
scripts/: draw_niri_button.py
src/: auth.rs  chat.rs  db.rs  import.rs  loudness.rs  main.rs  metadata.rs  radio.rs  routes.rs  subsonic.rs  tempo.rs
src/radio/: events.rs  helpers.rs  mod.rs  service.rs  types.rs
src/routes/: admin.rs  auth.rs  chat.rs  helpers.rs  mod.rs  pds.rs  queue.rs  radio.rs  songs.rs  subsonic_import.rs  upload.rs  well_known.rs  xrpc.rs
static/: client-metadata.json  index.html
static/assets/: APEv2Parser-C_ZqcrMI.js  APEv2Parser-C_ZqcrMI.js.map  AbstractID3Parser--OwmSP3A.js  AbstractID3Parser--OwmSP3A.js.map  AbstractID3Parser--leX5fys.js  AbstractID3Parser--leX5fys.js.map  AbstractID3Parser-3hbFj3Ey.js  AbstractID3Parser-3hbFj3Ey.js.map  AbstractID3Parser-46BdPN66.js  AbstractID3Parser-46BdPN66.js.map  AbstractID3Parser-4db7f7Iy.js  AbstractID3Parser-4db7f7Iy.js.map  AbstractID3Parser-5SWFd56R.js  AbstractID3Parser-5SWFd56R.js.map  AbstractID3Parser-B1cy0liB.js  AbstractID3Parser-B1cy0liB.js.map  AbstractID3Parser-BBKJ7x4-.js  AbstractID3Parser-BBKJ7x4-.js.map  AbstractID3Parser-BBTVttR5.js  AbstractID3Parser-BBTVttR5.js.map  (+2581 more)
syndication-worker/: .env.example  .gitignore  Cargo.toml  README.md
syndication-worker/src/: main.rs
(+99 files in other folders)
