[package]
name = "radio"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["json", "macros", "multipart", "ws"] }
axum-extra = { version = "0.10.3", features = ["cookie"] }
dotenvy = "0.15.7"
jacquard = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
smol_str = "0.3.4"
sqlx = { version = "0.8.6", features = ["derive", "runtime-tokio-rustls", "sqlite"] }
time = "0.3.44"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync"] }
tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
lofty = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

[dev-dependencies]
tempfile = "3.27.0"
